--- a/.prettierrc
+++ b/.prettierrc
@@ -1,18 +1,7 @@
 {
-  "arrowParens": "avoid",
-  "bracketSpacing": true,
-  "htmlWhitespaceSensitivity": "css",
-  "insertPragma": false,
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": false,
-  "printWidth": 80,
-  "proseWrap": "preserve",
-  "quoteProps": "as-needed",
-  "requirePragma": false,
+  "singleQuote": true,
   "semi": true,
-  "singleQuote": false,
-  "tabWidth": 2,
-  "trailingComma": "none",
   "useTabs": false,
-  "vueIndentScriptAndStyle": false
+  "tabWidth": 2,
+  "printWidth": 80
 }
