--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "d3-selection-multi": "^1.0.1",
     "eslint-plugin-react": "^7.29.3",
     "http-proxy-middleware": "^2.0.3",
+    "i18next": "^21.6.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
