--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "@types/styled-components": "^5.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
     "axios": "^0.24.0",
     "d3": "^5.16.0",
     "d3-selection-multi": "^1.0.1",
-    "eslint-plugin-react": "^7.29.3",
+    "http-proxy-middleware": "^2.0.4",
     "i18next": "^21.6.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,14 +40,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "mockserver": "json-server --watch --delay 500 --port 4000 mock/data.json"
-  },
-  "eslintConfig": {
-    "extends": [
-      "airbnb",
-      "prettier"
-    ]
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
@@ -64,8 +55,6 @@
     ]
   },
   "devDependencies": {
-    "@types/redux-logger": "^3.0.9",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "@types/redux-logger": "^3.0.9"
   }
 }
