--- a/package.json
+++ b/package.json
@@ -56,5 +56,6 @@
   },
   "devDependencies": {
     "@types/redux-logger": "^3.0.9"
-  }
+  },
+  "homepage": "https://skguma.github.io/Fedi-front"
 }
