--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build"
   },
   "browserslist": {
     "production": [
@@ -55,7 +56,8 @@
     ]
   },
   "devDependencies": {
-    "@types/redux-logger": "^3.0.9"
+    "@types/redux-logger": "^3.0.9",
+    "gh-pages": "^3.2.3"
   },
   "homepage": "https://skguma.github.io/Fedi-front"
 }
