--- a/package.json
+++ b/package.json
@@ -59,5 +59,5 @@
     "@types/redux-logger": "^3.0.9",
     "gh-pages": "^3.2.3"
   },
-  "homepage": "https://skguma.github.io/Fedi-front"
+  "homepage": "https://skguma.github.io/Fedi-front/build"
 }
